corregido error de "send" a "json"
